Yaml_Files/ingress1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1 
    spec:
      containers:
      - name: app1
        image: dockersamples/static-site
        ports:
        - containerPort: 80
