Yaml_Files/jefbosta.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: jefbabaca
  name: jefbabaca
spec:
  containers:
  - image: nginx
    name: jefbabaca
    ports:
    - containerPort: 80
    resources: {}
    livenessProbe:
      exec:
        command:
        - 'true'
    readinessProbe:
      exec:
        command:
        - sh
        - -C
        - 'wget -q -T4 -O- http://my-nginx:80'
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
