Yaml_Files/meu_dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: meudep
  name: meudep
spec:
  replicas: 10
  selector:
    matchLabels:
      app: DEP
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: DEP
    spec:
      containers:
      - image: nginx
        name: nginx
        resources:
          limits:
            memory: 512Mi
            cpu: "500m"
          requests:
            memory: 256Mi
            cpu: "256m"

        ports:
        - containerPort: 80
          protocol: TCP
status: {}
