Yaml_Files/meu_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: teste
  name: teste
spec:
  replicas: 1
  selector:
    matchLabels:
      app: TESTE
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: TESTE
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        ports:
        - containerPort: 8080
          protocol: TCP
status: {}
