Yaml_Files/outro.yml
apiVersion: extensions/v1
kind: Deployment
metadata:
  labels:
    run: nginx
    app: abiquiris
  name: primeiro-abquiris
  namespace: default
spec:
  replicas: 10
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
        labels:
            run: nginx
            dc: UK
    spec:
      containers:
      - image: nginx
        imagePullPlicy: Always
        name: nginx2
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
