Yaml_Files/pod_cka.yml
apiVersion: v1
kind: Pod
replicas: 6
metadata:
  labels:
    app: web
  name: web-cka
  namespace: default
spec:
  containers:
  - image: nginx:1.18.0
    name: nginx
    ports:
    - containerPort: 88
      protocol: TCP
    resources: {}
  restartPolicy: Always
