Yaml_Files/pod_probe.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
  name: my-nginx
spec:
  containers:
    image: nginx:latest
    name: my-nginx
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
