Yaml_Files/questao.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: cac
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: cac
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cac
  name: cac
spec:
  containers:
  - image: nginx:1.24.3
    name: cac
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
