Yaml_Files/serv.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: teste
  name: teste
  namespace: default
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.108.198.14
  clusterIPs:
  - 10.108.198.14
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31605
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: TESTE
  sessionAffinity: None
  type: LoadBalancer
