Yaml_Files/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
  - host: kubernetes-1.localdomain
    http:
      paths:
      - backend:
          serviceName: appsvc1
          servicePort: 80
        path: /app1
        pathType: Prefix
      - backend:
          serviceName: appsvc2
          servicePort: 80
        path: /app2
        pathType: Prefix
